install/system_management/templates/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: prometheus-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: connect-to-prometheus.yaml
          servicePort: 9090
        path: /prometheus(/|$)(.*)
        pathType: Prefix
